set(BASH_COMPLETIONS ${FULL_PACKAGE_NAME}-completion.bash)

set(SANITIZED_FULL_PACKAGE_NAME ${SANITIZED_PACKAGE_NAME}_v${KIM_VERSION_MAJOR})

configure_file(completion.bash.in ${BASH_COMPLETIONS} @ONLY)

install(
  FILES ${CMAKE_CURRENT_BINARY_DIR}/${BASH_COMPLETIONS}
  DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/bash_completion.d
  )
